syntax = "proto3";

option go_package = "github.com/hobbyfarm/gargantua/pkg/protobuf";

import "google/api/annotations.proto";
import "hobbyfarm/hobbyfarm.proto";

service VirtualMachineService {
  rpc List(Empty) returns (VirtualMachineList) {
    option(google.api.http) = {
      get: "/api/v2/virtualmachines";
    };
  }

  rpc Get(ID) returns (VirtualMachine) {
    option(google.api.http) = {
      get: "/api/v2/virtualmachines/{ID}";
    };
  }

  rpc Create(VirtualMachine) returns (VirtualMachine) {
    option(google.api.http) = {
      post: "/api/v2/virtualmachines";
      body: "*";
    };
  }

  rpc Update(VirtualMachine) returns (VirtualMachine) {
    option(google.api.http) = {
      put: "/api/v2/virtualmachines/{Name}"; // Must be Id not ID
      body: "*";
    };
  }

  rpc Delete(ID) returns (Empty) {
    option(google.api.http) = {
      delete: "/api/v2/virtualmachines/{ID}";
    };
  }
}

message VirtualMachineList {
  repeated VirtualMachine VirtualMachines = 1;
}